--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        
+        <link href="styles/default.css" rel="stylesheet" type="text/css">
         <title>Rachel Taylor, ITIS 3135, Introduction</title>
     </head>
     <body>
