--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -83,10 +83,10 @@
             </nav>
             <br>
             <p>Page built by Taylor Productions</p>
-            <a href="https://validator.w3.org/check?uri=referer">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fintroduction.html">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Frtaylo96.github.io%2f">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
