--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -14,6 +14,8 @@
             <a href="introduction.html">Introduction</a>
              || 
             <a href="contract.html">Contract</a>
+            ||
+            <a href="tables.html">HTML Tables</a>
         </nav>
         <main>
             <h2>Introduction</h2>
