--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -32,9 +32,9 @@
             <table>
                 <thead>
                     <tr>
-                        <th id="ph">Name</th>
-                        <th id="ph">E-Mail</th>
-                        <th id="ph" class="right">Years of Service</th>
+                        <th>Name</th>
+                        <th>E-Mail</th>
+                        <th class="right">Years of Service</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -161,10 +161,10 @@
             </nav>
             <br>
             <p>Page built by Taylor Productions</p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fintroduction.html">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Ftables.html">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Frtaylo96.github.io%2f">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Ftables.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
