updated department column to one color

--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -90,7 +90,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="2">Production Designer</td>
+                        <td id="department" rowspan="2">Production Designer</td>
                         <td>Tony Stark</td>
                         <td>ironman@tprod.com</td>
                         <td class="right">25</td>
@@ -103,14 +103,14 @@
                         <td>$10,400</td>
                     </tr>
                     <tr>
-                        <td>UI Designer</td>
+                        <td id="department">UI Designer</td>
                         <td>Chris Hemsworth</td>
                         <td>thor@tprod.com</td>
                         <td class="right">5</td>
                         <td>$5,200</td>
                     </tr>
                     <tr>
-                        <td rowspan="2">Editor</td>
+                        <td id="department" rowspan="2">Editor</td>
                         <td>Bruce Banner</td>
                         <td>thehulk@tprod.com</td>
                         <td class="right">10</td>
@@ -123,14 +123,14 @@
                         <td>$7,560</td>
                     </tr>
                     <tr>
-                        <td>IT Support</td>
+                        <td id="department">IT Support</td>
                         <td>Clint Barton</td>
                         <td>hawkeye@tprod.com</td>
                         <td class="right">15</td>
                         <td>$8,420</td>
                     </tr>
                     <tr>
-                        <td>Marketing</td>
+                        <td id="department">Marketing</td>
                         <td>Tom Hiddleson</td>
                         <td>loki@tprod.com</td>
                         <td class="right">3</td>
