activity-3-html-forms

--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -8,14 +8,16 @@
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor >> ITIS 3135</h1>
+            <h1>Rachel Taylor >> ITIS 3135 >> Introduction</h1>
         </header>
         <nav>
             <a href="introduction.html">Introduction</a>
              || 
             <a href="contract.html">Contract</a>
-            ||
+             ||
             <a href="tables.html">HTML Tables</a>
+             ||
+            <a href="forms.html">HTML Forms</a>
         </nav>
         <main>
             <h2>Introduction</h2>
@@ -88,7 +90,7 @@
             <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fintroduction.html">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Frtaylo96.github.io%2f">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fintroduction.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
