--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor >> ITIS 3135</h1>
+            <h1>Rachel Taylor >> ITIS 3135 >> HTML Tables</h1>
         </header>
         <nav>
             <a href="introduction.html">Introduction</a>
@@ -15,6 +15,8 @@
             <a href="contract.html">Contract</a>
              ||
             <a href="tables.html">HTML Tables</a>
+             ||
+            <a href="forms.html">HTML Forms</a>
         </nav>
         <main>
             <h2>HTML Tables</h2>
@@ -90,7 +92,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td id="department" rowspan="2">Production Designer</td>
+                        <td rowspan="2">Production Designer</td>
                         <td>Tony Stark</td>
                         <td>ironman@tprod.com</td>
                         <td class="right">25</td>
@@ -103,34 +105,33 @@
                         <td>$10,400</td>
                     </tr>
                     <tr>
-                        <td id="department">UI Designer</td>
+                        <td rowspan="2">UI Designer</td>
                         <td>Chris Hemsworth</td>
                         <td>thor@tprod.com</td>
                         <td class="right">5</td>
                         <td>$5,200</td>
                     </tr>
                     <tr>
-                        <td id="department" rowspan="2">Editor</td>
                         <td>Bruce Banner</td>
                         <td>thehulk@tprod.com</td>
                         <td class="right">10</td>
                         <td>$6,325</td>
                     </tr>
                     <tr>
+                        <td rowspan="2">Editor</td>
                         <td>Natasha Romanoff</td>
                         <td>blackwidow@tprod.com</td>
                         <td class="right">15</td>
                         <td>$7,560</td>
                     </tr>
                     <tr>
-                        <td id="department">IT Support</td>
                         <td>Clint Barton</td>
                         <td>hawkeye@tprod.com</td>
                         <td class="right">15</td>
                         <td>$8,420</td>
                     </tr>
                     <tr>
-                        <td id="department">Marketing</td>
+                        <td>Marketing</td>
                         <td>Tom Hiddleson</td>
                         <td>loki@tprod.com</td>
                         <td class="right">3</td>
