website-evaluations.html added

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,20 @@
-I'm Rachel Taylor, and this is my ITIS3135 First Course Page.
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link href="styles/default.css" rel="stylesheet" type="text/css">
+        <title>I'm Rachel Taylor, and this is my ITIS3135 First Course Page.</title>
+    </head>
+    <body>
+        <nav>
+            <a href="index.html">Index</a>
+             ||
+            <a href="introduction.html">Introduction</a>
+             ||
+            <a href="tables.html">HTML Tables</a>
+             ||
+            <a href="forms.html">HTML Forms</a>
+             ||
+            <a href="website_evaluations.html">Website Evaluations</a>
+        </nav>
+    </body>
