--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -11,11 +11,15 @@
             <h1>Rachel Taylor >> ITIS 3135 >> Introduction</h1>
         </header>
         <nav>
+            <a href="index.html">Index</a>
+             ||
             <a href="introduction.html">Introduction</a>
              ||
             <a href="tables.html">HTML Tables</a>
              ||
             <a href="forms.html">HTML Forms</a>
+             ||
+            <a href="website_evaluations.html">Website Evaluations</a>
         </nav>
         <main>
             <h2>Introduction</h2>
