--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <title>I'm Rachel Taylor, and this is my ITIS3135 First Course Page.</title>
+        <title>ITIS3135 First Course Page</title>
     </head>
     <body>
+        <header>
+            <h1>I'm Rachel Taylor, and this is my ITIS3135 First Course Page.</h1>
+        </header>
         <nav>
             <a href="index.html">Index</a>
              ||
