--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -22,7 +22,7 @@
         </nav>
         <main>
             <h2>Website Evaluations</h2>
-            <h3 href="https://www.apple.com">Apple</h3>
+            <a href="https://www.apple.com"><h3>Apple</h3></a>
             <p>Apple is a product that sells all sorts of technology, mainly known for IPhones, Macs, and IPads. I will be focusing on the main page of Apple</p>
             <ul>
                 <li>Contrast -  The tones and colors are eye catching. The directions are simple and everything is easy to find if you know what you are looking for, or even just browsing</li>
@@ -30,7 +30,7 @@
                 <li>Alignment - Apple's alignment is following an invisible line all the way down the main page. Nothing seems out of place or confusing to read while scrolling, you always know what the paragraph is talking about.</li>
                 <li>Proximity - The proximity of the main page is definitely sectioned off, and it makes it clear which image in pertaining to which text.</li>
             </ul>
-            <h3 href="https://thebiguglywebsite.com">The Big Ugly Website</h3>
+            <a href="https://thebiguglywebsite.com"><h3>The Big Ugly Website</h3></a>
             <p>The Big Ugly Website is an eyesore, I feel like it was made to be analyzed with CRAP Principles</p>
             <ul>
                 <li>Contrast - This websites colors are just hard to look at, starting with the bright yellow background color. Even some of the figure background colors are hard to look at with this background in contrast. </li>
@@ -55,10 +55,10 @@
             </nav>
             <br>
             <p>Page built by Taylor Productions</p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Ftables.html">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fwebsite_evaluations.html">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Ftables.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fwebsite_evaluations.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
