--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <title>Rachel Taylor, ITIS 3135, HTML Tables</title>
+        <title>Rachel Taylor, ITIS 3135, Website Evaluations</title>
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor >> ITIS 3135 >> HTML Tables</h1>
+            <h1>Rachel Taylor >> ITIS 3135 >> Website Evaluations</h1>
         </header>
         <nav>
             <a href="index.html">Index</a>
