your-whimsical-brand

--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -24,13 +24,13 @@
             <h2>HTML Tables</h2>
             <h3>My Tabular Data</h3>
             <ol>
-                <li>Tony Stark - ironman@tprod.com for 25 years</li>
-                <li>Steve Rogers - captainamerica@tprod.com for 33 years</li>
-                <li>Bruce Banner - thehulk@tprod.com for 10 years</li>
-                <li>Chris Hemsworth - thor@tprod.com for 5 years</li>
-                <li>Natasha Romanoff - blackwidow@tprod.com for 15 years</li>
-                <li>Clint Barton - hawkeye@tprod.com for 15 years</li>
-                <li>Tom Hiddleson - loki@tprod.com for 3 years</li>
+                <li>Tony Stark - ironman@rptfind.co for 25 years</li>
+                <li>Steve Rogers - captainamerica@rptfind.co for 33 years</li>
+                <li>Bruce Banner - thehulk@rptfind.co for 10 years</li>
+                <li>Chris Hemsworth - thor@rptfind.co for 5 years</li>
+                <li>Natasha Romanoff - blackwidow@rptfind.co for 15 years</li>
+                <li>Clint Barton - hawkeye@rptfind.co for 15 years</li>
+                <li>Tom Hiddleson - loki@rptfind.co for 3 years</li>
             </ol>
             <h3>Employee Data in a Simple Table</h3>
             <table>
@@ -44,37 +44,37 @@
                 <tbody>
                     <tr>
                         <td>Tony Stark</td>
-                        <td>ironman@tprod.com</td>
+                        <td>ironman@rptfind.co</td>
                         <td class="right">25</td>
                     </tr>
                     <tr>
                         <td>Steve Rodgers</td>
-                        <td>captianamerica@tprod.com</td>
+                        <td>captianamerica@rptfind.co</td>
                         <td class="right">33</td>
                     </tr>
                     <tr>
                         <td>Bruce Banner</td>
-                        <td>thehulk@tprod.com</td>
+                        <td>thehulk@rptfind.co</td>
                         <td class="right">10</td>
                     </tr>
                     <tr>
                         <td>Chris Hemsworth</td>
-                        <td>thor@tprod.com</td>
+                        <td>thor@rptfind.co</td>
                         <td class="right">5</td>
                     </tr>
                     <tr>
                         <td>Natasha Romanoff</td>
-                        <td>blackwidow@tprod.com</td>
+                        <td>blackwidow@rptfind.co</td>
                         <td class="right">15</td>
                     </tr>
                     <tr>
                         <td>Clint Barton</td>
-                        <td>hawkeye@tprod.com</td>
+                        <td>hawkeye@rptfind.co</td>
                         <td class="right">15</td>
                     </tr>
                     <tr>
                         <td>Tom Hiddleson</td>
-                        <td>loki@tprod.com</td>
+                        <td>loki@rptfind.co</td>
                         <td class="right">3</td>
                     </tr>
                 </tbody>
@@ -96,20 +96,20 @@
                     <tr>
                         <td rowspan="2">Production Designer</td>
                         <td>Tony Stark</td>
-                        <td>ironman@tprod.com</td>
+                        <td>ironman@rptfind.co</td>
                         <td class="right">25</td>
                         <td>$8,667</td>
                     </tr>
                     <tr>
                         <td>Steve Rodgers</td>
-                        <td>captianamerica@tprod.com</td>
+                        <td>captianamerica@rptfind.co</td>
                         <td class="right">33</td>
                         <td>$10,400</td>
                     </tr>
                     <tr>
                         <td rowspan="2">UI Designer</td>
                         <td>Chris Hemsworth</td>
-                        <td>thor@tprod.com</td>
+                        <td>thor@rptfind.co</td>
                         <td class="right">5</td>
                         <td>$5,200</td>
                     </tr>
@@ -122,20 +122,20 @@
                     <tr>
                         <td rowspan="2">Editor</td>
                         <td>Natasha Romanoff</td>
-                        <td>blackwidow@tprod.com</td>
+                        <td>blackwidow@rptfind.co</td>
                         <td class="right">15</td>
                         <td>$7,560</td>
                     </tr>
                     <tr>
                         <td>Clint Barton</td>
-                        <td>hawkeye@tprod.com</td>
+                        <td>hawkeye@rptfind.co</td>
                         <td class="right">15</td>
                         <td>$8,420</td>
                     </tr>
                     <tr>
                         <td>Marketing</td>
                         <td>Tom Hiddleson</td>
-                        <td>loki@tprod.com</td>
+                        <td>loki@rptfind.co</td>
                         <td class="right">3</td>
                         <td>$6,360</td>
                     </tr>
@@ -163,7 +163,7 @@
                 <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
             </nav>
             <br>
-            <p>Page built by Taylor Productions</p>
+            <p>Page built by RTFIndustries&copy</p>
             <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Ftables.html">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
