--- a/itis3135/brand-rapid-tree-frog.html
+++ b/itis3135/brand-rapid-tree-frog.html
@@ -48,7 +48,13 @@
             </p>
         </main>
         <footer>
-            <p>Page built by RTFIndustries&copy</p>
+            <p>Page built by RTFIndustries&copy;</p>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fbrand-rapid-tree-frog.html">
+                <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
+            </a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fbrand-rapid-tree-frog.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+                <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
+            </a>
         </footer>
     </body>
 </html>
