--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -54,7 +54,7 @@
                 <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
             </nav>
             <br>
-            <p>Page built by Taylor Productions</p>
+            <p>Page built by RTFIndustries&copy;</p>
             <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fwebsite_evaluations.html">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
