first-scripts.html uploaded

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
+        <script src="./scripts/alert.js" type="text/javascript"></script>
         <title>ITIS3135 First Course Page</title>
     </head>
     <body>
@@ -19,5 +20,8 @@
             <a href="forms.html">HTML Forms</a>
              ||
             <a href="website_evaluations.html">Website Evaluations</a>
+             ||
+            <a href="interaction.html">Interaction</a>
+             ||
+            <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
-    </body>
