--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
+        <script src="./scripts/alert.js" type="text/javascript"></script>
         <title>Rachel Taylor, ITIS 3135, HTML Tables</title>
     </head>
     <body>
@@ -19,6 +20,10 @@
             <a href="forms.html">HTML Forms</a>
              ||
             <a href="website_evaluations.html">Website Evaluations</a>
+             ||
+            <a href="interaction.html">Interaction</a>
+             ||
+            <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
         <main>
             <h2>HTML Tables</h2>
