first-scripts validation updates

--- a/itis3135/website-evaluations.html
+++ b/itis3135/website-evaluations.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="./scripts/alert.js" type="text/javascript"></script>
+        <script src="./scripts/alert.js"></script>
         <title>Rachel Taylor, ITIS 3135, Website Evaluations</title>
     </head>
     <body>
@@ -19,9 +19,9 @@
              ||
             <a href="forms.html">HTML Forms</a>
              ||
-            <a href="website_evaluations.html">Website Evaluations</a>
+            <a href="website-evaluations.html">Website Evaluations</a>
              ||
-            <a href="interaction.html">Interaction</a>
+            <a href="first-scripts.html">First Scripts</a>
              ||
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
@@ -60,10 +60,10 @@
             </nav>
             <br>
             <p>Page built by RTFIndustries&copy;</p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fwebsite_evaluations.html">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fwebsite-evaluations.html">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fwebsite_evaluations.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fwebsite-evaluations.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
