--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="./scripts/alert.js" type="text/javascript"></script>
+        <script src="./scripts/alert.js"></script>
         <title>Rachel Taylor, ITIS 3135, HTML Forms</title>
     </head>
     <body>
@@ -19,9 +19,9 @@
              ||
             <a href="forms.html">HTML Forms</a>
              ||
-            <a href="website_evaluations.html">Website Evaluations</a>
+            <a href="website-evaluations.html">Website Evaluations</a>
              ||
-            <a href="interaction.html">Interaction</a>
+             <a href="first-scripts.html">First Scripts</a>
              ||
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
