--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -86,7 +86,7 @@
             </table>
             <h3>Employee Data in a Complex Table</h3>
             <figure>
-                <figcaption>Taylor Productions Avengers Employee Chart</figcaption>
+                <figcaption>RPTF Industries, Avengers Employee Chart</figcaption>
                 <table>
                 <thead>
                     <tr>
@@ -99,7 +99,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="2">Production Designer</td>
+                        <th class="thead" rowspan="2">Production Designer</th>
                         <td>Tony Stark</td>
                         <td>ironman@rptfind.co</td>
                         <td class="right">25</td>
@@ -112,7 +112,7 @@
                         <td>$10,400</td>
                     </tr>
                     <tr>
-                        <td rowspan="2">UI Designer</td>
+                        <th class="thead" rowspan="2">UI Designer</th>
                         <td>Chris Hemsworth</td>
                         <td>thor@rptfind.co</td>
                         <td class="right">5</td>
@@ -125,7 +125,7 @@
                         <td>$6,325</td>
                     </tr>
                     <tr>
-                        <td rowspan="2">Editor</td>
+                        <th class="thead" rowspan="2">Editor</th>
                         <td>Natasha Romanoff</td>
                         <td>blackwidow@rptfind.co</td>
                         <td class="right">15</td>
@@ -138,7 +138,7 @@
                         <td>$8,420</td>
                     </tr>
                     <tr>
-                        <td>Marketing</td>
+                        <th class="thead">Marketing</th>
                         <td>Tom Hiddleson</td>
                         <td>loki@rptfind.co</td>
                         <td class="right">3</td>
