--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -20,9 +20,11 @@
              ||
             <a href="forms.html">HTML Forms</a>
              ||
-             <a href="website-evaluations.html">Website Evaluations</a>
+            <a href="website-evaluations.html">Website Evaluations</a>
              ||
             <a href="first-scripts.html">First Scripts</a>
+             ||
+            <a href="name-the-polygon.html">Name The Polygon</a>
              ||
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
