--- a/itis3135/name-the-polygon.html
+++ b/itis3135/name-the-polygon.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="./scripts/default.js"></script>
+        <script src="./scripts/shape.js"></script>
         <script src="./scripts/alert.js" ></script>
-        <title>Rachel Taylor >> ITIS 3135 >> First Scripts</title>
+        <title>Rachel Taylor >> ITIS 3135 >> Name The Polygon</title>
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor >> ITIS 3135 >> First Scripts</h1>
+            <h1>Rachel Taylor >> ITIS 3135 >> Name The Polygon</h1>
         </header>
         <nav>
             <a href="index.html">Index</a>
@@ -29,32 +29,23 @@
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
         <main>
-            <h2>First Scripts</h2>
-                <h3>Want to see something cool? Press the button below!</h3>
-                    <div><button onclick="userInformation()" class="button">Press me!</button></div>
-                    <br>
-                    <p id="date-and-time"></p>
-                    <p id="welcome"></p>
-                    <p id="mood"></p>
-                <h3>Fun with Buttons and Prompts!</h3>
+            <h2>Name The Polygon</h2>
+                <h3>Description</h3>    
                     <p>
-                        Click on any of the buttons following to see some of the fun scripts we can write for you!
-                        They are mainly simplistic, yet still fun to do!
-                        Have a rapidly fun time!
+                        This webpage is used by Rapid Tree Frog Industries to have practice using 
+                        if statements, loops, and functions in JavaScript.  
                     </p>
-                    <div>
-                        <button onclick="joke()" class="button">Tell me a joke!</button>
-                        <button onclick="toCelsius()" class="button">Fahrenheit to Celsius!</button>
-                        <button onclick="addition()" class="button">Addition!</button>
-                        <button onclick="noise()" class="button">Noise!</button>
-                        <button onclick="favoriteAvenger()" class="button">Favorite Avenger!</button>
-                    </div>
-                <h3>Text After Clicking Buttons:</h3>
-                    <p id="joke"></p>
-                    <p id="celsius"></p>
-                    <p id="addition"></p>
-                    <p id="noise"></p>
-                    <p id="avenger"></p>
+                    <p>
+                        If you'd like to run the JavaScript again, just refresh the page!
+                    </p>
+                <h3>Disclaimer</h3>
+                    <p>
+                        The work submitted here is my work - I have not copied and pasted code into these pages. 
+                        I have gotten help from these sites: <a href="https://www.w3schools.com/jsref/jsref_round.asp">https://www.w3schools.com/jsref/jsref_round.asp</a>,
+                        <a href="https://www.w3schools.com/jsref/jsref_abs.asp">https://www.w3schools.com/jsref/jsref_abs.asp</a>, and 
+                        <a href="https://www.w3schools.com/js/js_functions.asp">https://www.w3schools.com/js/js_functions.asp</a> 
+                    </p>
+                    <p>- Rachel M. Taylor, September 29th, 2021 at 8:57PM </p>
         </main>
         <footer>
             <nav>
