--- a/itis3135/website-evaluations.html
+++ b/itis3135/website-evaluations.html
@@ -23,6 +23,8 @@
              ||
             <a href="first-scripts.html">First Scripts</a>
              ||
+            <a href="name-the-polygon.html">Name The Polygon</a>
+             ||
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
         <main>
