calculator_try upload

--- a/itis3135/calculator_try.html
+++ b/itis3135/calculator_try.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="./scripts/default.js"></script>
+        <script src="./scripts/calculator_try.js"></script>
         <script src="./scripts/alert.js" ></script>
-        <title>Rachel Taylor >> ITIS 3135 >> First Scripts</title>
+        <title>Rachel Taylor >> ITIS 3135 >> Calculator Try</title>
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor >> ITIS 3135 >> First Scripts</h1>
+            <h1>Rachel Taylor >> ITIS 3135 >> Calculator Try</h1>
         </header>
         <nav>
             <a href="index.html">Index</a>
@@ -31,32 +31,32 @@
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
         <main>
-            <h2>First Scripts</h2>
-                <h3>Want to see something cool? Press the button below!</h3>
-                    <button onclick="userInformation()" class="button">Press me!</button>
-                    <br>
-                    <p id="date-and-time"></p>
-                    <p id="welcome"></p>
-                    <p id="mood"></p>
-                <h3>Fun with Buttons and Prompts!</h3>
+            <h2>Calculator Try</h2>
+                <h3>Description</h3>
                     <p>
-                        Click on any of the buttons following to see some of the fun scripts we can write for you!
-                        They are mainly simplistic, yet still fun to do!
-                        Have a rapidly fun time!
+                        Rapid Tree Frog Industries is trying to build our own Calculator in JavaScript!
                     </p>
-                    <div>
-                        <button onclick="joke()" class="button">Tell me a joke!</button>
-                        <button onclick="toCelsius()" class="button">Fahrenheit to Celsius!</button>
-                        <button onclick="addition()" class="button">Addition!</button>
-                        <button onclick="noise()" class="button">Noise!</button>
-                        <button onclick="favoriteAvenger()" class="button">Favorite Avenger!</button>
-                    </div>
-                <h3>Text After Clicking Buttons:</h3>
-                    <p id="joke"></p>
-                    <p id="celsius"></p>
-                    <p id="addition"></p>
-                    <p id="noise"></p>
-                    <p id="avenger"></p>
+                <h3>Calculator</h3>
+                    <button onclick="showNum(1)">1</button>
+                    <button onclick="showNum(2)">2</button>
+                    <button onclick="showNum(3)">3</button>
+                    <button>+</button>
+                    <br>
+                    <button onclick="showNum(4)">4</button>
+                    <button onclick="showNum(5)">5</button>
+                    <button onclick="showNum(6)">6</button>
+                    <button>-</button>
+                    <br>
+                    <button onclick="showNum(7)">7</button>
+                    <button onclick="showNum(8)">8</button>
+                    <button onclick="showNum(9)">9</button>
+                    <button>X</button>
+                    <br>
+                    <button>C</button>
+                    <button onclick="showNum(0)">0</button>
+                    <button>=</button>
+                    <button>/</button>
+                    <!--I'm assuming this is all we had to do for the Calculator, however I am still going to do the tutorial so I know for next time.-->
         </main>
         <footer>
             <nav>
@@ -74,10 +74,10 @@
             </nav>
             <br>
             <p>Page built by RTFIndustries&copy;</p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Ffirst-scripts.html">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fname-the-polygon.html">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Ffirst-scripts.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fname-the-polygon.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
