--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -25,6 +25,8 @@
              ||
             <a href="name-the-polygon.html">Name The Polygon</a>
              ||
+            <a href="calculator_try.html">Calculator Try</a>
+             ||
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
         <main>
