Updating notes for next time

--- a/itis3135/calculator_try.html
+++ b/itis3135/calculator_try.html
@@ -28,6 +28,8 @@
              ||
             <a href="calculator_try.html">Calculator Try</a>
              ||
+            <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+             ||
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
         <main>
@@ -56,7 +58,6 @@
                     <button onclick="showNum(0)">0</button>
                     <button>=</button>
                     <button>/</button>
-                    <!--I'm assuming this is all we had to do for the Calculator, however I am still going to do the tutorial so I know for next time.-->
         </main>
         <footer>
             <nav>
