--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -27,5 +27,7 @@
              ||
             <a href="calculator_try.html">Calculator Try</a>
              ||
+            <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+             ||
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
