--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -27,6 +27,8 @@
              ||
             <a href="calculator_try.html">Calculator Try</a>
              ||
+            <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+             ||
             <button onclick="alertFunction()" class="button">Click me!</button>
         </nav>
         <main>
