--- a/itis3135/website-evaluations.html
+++ b/itis3135/website-evaluations.html
@@ -33,22 +33,30 @@
         </nav>
         <main>
             <h2>Website Evaluations</h2>
-            <a href="https://www.apple.com"><h3>Apple</h3></a>
-            <p>Apple is a product that sells all sorts of technology, mainly known for IPhones, Macs, and IPads. I will be focusing on the main page of Apple</p>
-            <ul>
-                <li>Contrast -  The tones and colors are eye catching. The directions are simple and everything is easy to find if you know what you are looking for, or even just browsing</li>
-                <li>Repetition - The brand is well represented by the colors of the webpage and always having the logo visible on their products. The menu bar is also always present even when scrolling</li>
-                <li>Alignment - Apple's alignment is following an invisible line all the way down the main page. Nothing seems out of place or confusing to read while scrolling, you always know what the paragraph is talking about.</li>
-                <li>Proximity - The proximity of the main page is definitely sectioned off, and it makes it clear which image in pertaining to which text.</li>
-            </ul>
-            <a href="https://thebiguglywebsite.com"><h3>The Big Ugly Website</h3></a>
-            <p>The Big Ugly Website is an eyesore, I feel like it was made to be analyzed with CRAP Principles</p>
-            <ul>
-                <li>Contrast - This websites colors are just hard to look at, starting with the bright yellow background color. Even some of the figure background colors are hard to look at with this background in contrast. </li>
-                <li>Repetition - This website is following repetition a bit by having the name of the website be listed all around, but they are not the same in CRAP standards </li>
-                <li>Alignment - The alignment is close, but there is no straight invisible line that is being followed throughout the website </li>
-                <li>Proximity - There is some linear detailing with proximity, but that just seems to be regular HTML standards making the site easily readable in some places</li>
-            </ul>
+                <section>
+                    <a href="https://www.apple.com">
+                        <h3>Apple</h3>
+                    </a>
+                    <p>Apple is a product that sells all sorts of technology, mainly known for IPhones, Macs, and IPads. I will be focusing on the main page of Apple</p>
+                    <ul>
+                        <li>Contrast -  The tones and colors are eye catching. The directions are simple and everything is easy to find if you know what you are looking for, or even just browsing</li>
+                        <li>Repetition - The brand is well represented by the colors of the webpage and always having the logo visible on their products. The menu bar is also always present even when scrolling</li>
+                        <li>Alignment - Apple's alignment is following an invisible line all the way down the main page. Nothing seems out of place or confusing to read while scrolling, you always know what the paragraph is talking about.</li>
+                        <li>Proximity - The proximity of the main page is definitely sectioned off, and it makes it clear which image in pertaining to which text.</li>
+                    </ul>
+                </section>
+                <section>
+                    <a href="https://thebiguglywebsite.com">
+                        <h3>The Big Ugly Website</h3>
+                    </a>
+                    <p>The Big Ugly Website is an eyesore, I feel like it was made to be analyzed with CRAP Principles</p>
+                    <ul>
+                        <li>Contrast - This websites colors are just hard to look at, starting with the bright yellow background color. Even some of the figure background colors are hard to look at with this background in contrast. </li>
+                        <li>Repetition - This website is following repetition a bit by having the name of the website be listed all around, but they are not the same in CRAP standards </li>
+                        <li>Alignment - The alignment is close, but there is no straight invisible line that is being followed throughout the website </li>
+                        <li>Proximity - There is some linear detailing with proximity, but that just seems to be regular HTML standards making the site easily readable in some places</li>
+                    </ul>
+                </section>
         </main>
         <footer>
             <nav>
